fixing evaluator crash